# json-validator

./: .editorconfig  NOTICES.md  README.md
.github/workflows/: on-pullrequest.yml  scorecard.yml
python/: example.py  pyproject.toml
